[refactor] enum으로 변경 (#434)