@@ -16,10 +16,9 @@ import java.util.concurrent.Executors;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.val;
-import org.sopt.app.application.playground.dto.PlayGroundEmploymentResponse;
-import org.sopt.app.application.playground.dto.PlaygroundPostInfo.*;
-import org.sopt.app.application.playground.dto.PlaygroundProfileInfo.*;
 import org.sopt.app.application.auth.dto.PlaygroundAuthTokenInfo.RefreshedToken;
+import org.sopt.app.application.playground.dto.PlayGroundEmploymentResponse;
+import org.sopt.app.application.playground.dto.PlayGroundPostCategory;
 import org.sopt.app.application.playground.dto.PlaygroundPostInfo.PlaygroundPost;
 import org.sopt.app.application.playground.dto.PlaygroundPostInfo.PlaygroundPostResponse;
 import org.sopt.app.application.playground.dto.PlaygroundProfileInfo.ActiveUserIds;
@@ -34,9 +33,10 @@ import org.sopt.app.common.exception.BadRequestException;
 import org.sopt.app.common.exception.UnauthorizedException;
 import org.sopt.app.common.response.ErrorCode;
 import org.sopt.app.domain.enums.UserStatus;
-import org.sopt.app.presentation.home.response.RecentPostsResponse;
-import org.sopt.app.presentation.auth.AppAuthRequest.*;
+import org.sopt.app.presentation.auth.AppAuthRequest.AccessTokenRequest;
+import org.sopt.app.presentation.auth.AppAuthRequest.CodeRequest;
 import org.sopt.app.presentation.home.response.EmploymentPostResponse;
+import org.sopt.app.presentation.home.response.RecentPostsResponse;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpClientErrorException.BadRequest;
@@ -184,18 +184,18 @@ public class PlaygroundAuthService {
     public List<RecentPostsResponse> getRecentPosts(String playgroundToken) {
         final Map<String, String> accessToken = createAuthorizationHeaderByUserPlaygroundToken(playgroundToken);
         try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-            List<String> categories = List.of("SOPT 활동", "자유", "파트");
+            List<PlayGroundPostCategory> categories = List.of(PlayGroundPostCategory.SOPT_ACTIVITY, PlayGroundPostCategory.FREE, PlayGroundPostCategory.PART);
             CompletableFuture<RecentPostsResponse> hotPostFuture = CompletableFuture.supplyAsync(() ->
                     RecentPostsResponse.of(playgroundClient.getPlaygroundHotPost(accessToken)), executor);
             List<CompletableFuture<RecentPostsResponse>> categoryFutures = categories.stream()
-                    .map(category -> CompletableFuture.supplyAsync(() -> playgroundClient.getRecentPosts(accessToken, category), executor))
+                    .map(category -> CompletableFuture.supplyAsync(() -> playgroundClient.getRecentPosts(accessToken, category.getDisplayName()), executor))
                     .toList();
             List<CompletableFuture<RecentPostsResponse>> allFutures = new ArrayList<>(categoryFutures);
             allFutures.addFirst(hotPostFuture);
             CompletableFuture<Void> allOf = CompletableFuture.allOf(allFutures.toArray(new CompletableFuture[0]));
             return allOf.thenApply(v -> allFutures.stream()
                             .map(CompletableFuture::join)
-                            .collect(Collectors.toList()))
+                            .toList())
                     .join();
         }
     }
